Migrate project to androidx

--- a/app/src/main/res/layout/activity_crop_rotate.xml
+++ b/app/src/main/res/layout/activity_crop_rotate.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -22,7 +22,7 @@
         android:layout_below="@+id/toolbar"
         />
 
-    <android.support.design.widget.FloatingActionButton
+    <androidx.appcompat.widget.FloatingActionButton
         android:id="@+id/nextStep"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
