Final project migrated to androidx.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.appcompat.widget.Toolbar
         app:titleTextColor="@android:color/white"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -21,7 +21,8 @@
         tools:context=".MainActivity"
         android:gravity="center_vertical|center|center_horizontal"
         android:orientation="vertical"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        tools:ignore="UseCompoundDrawables">
 
         <TextView
             android:layout_width="wrap_content"
